integration_tests/tests/integration_tests/snapshots/integration_tests__token_extensions_tests__token_extensions_get_asset_scenario2.snap
---
source: integration_tests/tests/integration_tests/token_extensions_tests.rs
expression: response
snapshot_kind: text
---
{
  "interface": "FungibleToken",
  "id": "HVbpJAQGNpkgBaYBZQBR1t7yFdvaYVp2vCQQfKKEN4tM",
  "authorities": [],
  "compression": {
    "eligible": false,
    "compressed": false,
    "data_hash": "",
    "creator_hash": "",
    "asset_hash": "",
    "tree": "",
    "seq": 0,
    "leaf_id": 0
  },
  "grouping": [],
  "royalty": {
    "royalty_model": "creators",
    "target": null,
    "percent": 0.0,
    "basis_points": 0,
    "primary_sale_happened": false,
    "locked": false
  },
  "creators": [],
  "ownership": {
    "frozen": false,
    "delegated": false,
    "delegate": null,
    "ownership_model": "token",
    "owner": ""
  },
  "mutable": true,
  "burnt": false,
  "mint_extensions": {
    "metadata": {
      "uri": "https://token-metadata.paxos.com/usdp_metadata/prod/solana/usdp_metadata.json",
      "mint": "HVbpJAQGNpkgBaYBZQBR1t7yFdvaYVp2vCQQfKKEN4tM",
      "name": "Pax Dollar",
      "symbol": "USDP",
      "update_authority": "2apBGMsS6ti9RyF5TwQTDswXBWskiJP2LD4cUEDqYJjk",
      "additional_metadata": []
    },
    "transfer_hook": {
      "authority": "2apBGMsS6ti9RyF5TwQTDswXBWskiJP2LD4cUEDqYJjk",
      "program_id": null
    },
    "metadata_pointer": {
      "authority": "2apBGMsS6ti9RyF5TwQTDswXBWskiJP2LD4cUEDqYJjk",
      "metadata_address": "HVbpJAQGNpkgBaYBZQBR1t7yFdvaYVp2vCQQfKKEN4tM"
    },
    "permanent_delegate": {
      "delegate": "2apBGMsS6ti9RyF5TwQTDswXBWskiJP2LD4cUEDqYJjk"
    },
    "mint_close_authority": {
      "close_authority": "2apBGMsS6ti9RyF5TwQTDswXBWskiJP2LD4cUEDqYJjk"
    },
    "confidential_transfer_mint": {
      "authority": "2apBGMsS6ti9RyF5TwQTDswXBWskiJP2LD4cUEDqYJjk",
      "auditor_elgamal_pubkey": null,
      "auto_approve_new_accounts": false
    }
  }
}
